--- a/src/com/company/MainWindow.form
+++ b/src/com/company/MainWindow.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.MainWindow">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1006" height="549"/>
+      <xy x="20" y="20" width="1161" height="549"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -35,10 +35,11 @@
           <component id="464aa" class="javax.swing.JTextField" binding="detectorSubstanceTextField1">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="Gd2O2S:Tb"/>
             </properties>
           </component>
@@ -61,10 +62,11 @@
           <component id="877ff" class="javax.swing.JTextField" binding="thicknessTextField">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="100"/>
             </properties>
           </component>
@@ -79,10 +81,11 @@
           <component id="dcc1" class="javax.swing.JTextField" binding="cellWidthTextField">
             <constraints>
               <grid row="3" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="5"/>
             </properties>
           </component>
@@ -97,10 +100,11 @@
           <component id="c76dd" class="javax.swing.JTextField" binding="cellNumberTextField">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="1024"/>
             </properties>
           </component>
@@ -115,10 +119,11 @@
           <component id="af19b" class="javax.swing.JTextField" binding="resolutionTextField">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="5"/>
             </properties>
           </component>
@@ -133,10 +138,11 @@
           <component id="5fd18" class="javax.swing.JTextField" binding="detectorDensityTextField">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="7.34"/>
             </properties>
           </component>
@@ -179,6 +185,7 @@
                 </constraints>
                 <properties>
                   <enabled value="false"/>
+                  <horizontalAlignment value="0"/>
                   <text value="0.2"/>
                 </properties>
               </component>
@@ -198,6 +205,7 @@
                 </constraints>
                 <properties>
                   <enabled value="false"/>
+                  <horizontalAlignment value="0"/>
                   <text value="100000"/>
                 </properties>
               </component>
@@ -216,7 +224,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Mass att. coof:"/>
+                  <text value="Mass attenuation cooficieny [cm2/g]:"/>
                 </properties>
               </component>
               <component id="97795" class="javax.swing.JTextField" binding="xRayMassatCoTextField">
@@ -226,6 +234,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <horizontalAlignment value="0"/>
                   <text value="3.2"/>
                 </properties>
               </component>
@@ -280,7 +289,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="b03cc" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b03cc" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties/>
@@ -288,41 +297,31 @@
         <children>
           <component id="4db5b" class="javax.swing.JLabel" binding="numberOfLightPhotonsLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Number of light photons:"/>
             </properties>
           </component>
-          <component id="1a7a1" class="javax.swing.JTextField" binding="numberOfLightPhotonsTextField">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="100000"/>
-            </properties>
-          </component>
           <component id="44541" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Probablity of absorption:"/>
-            </properties>
-          </component>
-          <component id="fcbe7" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Probablity of dispersion:"/>
+              <text value="Probablity of absorption [cm2/g]:"/>
+            </properties>
+          </component>
+          <component id="fcbe7" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Probablity of dispersion: [cm2/g]"/>
             </properties>
           </component>
           <component id="3d6d" class="javax.swing.JLabel">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Probablity of reflection:"/>
@@ -330,50 +329,84 @@
           </component>
           <component id="d3920" class="javax.swing.JTextField" binding="probablityOfAbsorptiontextField">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="0.9"/>
             </properties>
           </component>
           <component id="d416d" class="javax.swing.JTextField" binding="probablityOfDispersiontextField">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="499.55"/>
             </properties>
           </component>
           <component id="4583d" class="javax.swing.JTextField" binding="probablityOfReflectionTextField">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="0.9"/>
             </properties>
           </component>
           <component id="4169e" class="javax.swing.JLabel">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Light wave length []:"/>
+              <text value="Light wave length [nm]:"/>
             </properties>
           </component>
           <component id="54aa1" class="javax.swing.JTextField" binding="lightWaveLengthTextField">
             <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="545"/>
+            </properties>
+          </component>
+          <component id="1a7a1" class="javax.swing.JTextField" binding="numberOfLightPhotonsTextField">
+            <constraints>
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="100" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="0"/>
+              <text value="10000"/>
+            </properties>
+          </component>
+          <component id="86afc" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=" x 10 000 ="/>
+            </properties>
+          </component>
+          <component id="9f36f" class="javax.swing.JTextField" binding="a10TextField" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="30" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="0"/>
+              <text value="10"/>
             </properties>
           </component>
         </children>
@@ -395,10 +428,11 @@
           <component id="48305" class="javax.swing.JTextField" binding="numberOfLSFTextField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="20"/>
             </properties>
           </component>
@@ -413,10 +447,11 @@
           <component id="3e13" class="javax.swing.JTextField" binding="numberOfMTFXPhotonsTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="100"/>
             </properties>
           </component>
@@ -431,10 +466,11 @@
           <component id="e9e1b" class="javax.swing.JTextField" binding="numberOfMTFLoopsextField">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="10"/>
             </properties>
           </component>
@@ -449,10 +485,11 @@
           <component id="1f58a" class="javax.swing.JTextField" binding="numberOFNPSXPhotonsTextField">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="100"/>
             </properties>
           </component>
@@ -467,10 +504,11 @@
           <component id="b2730" class="javax.swing.JTextField" binding="numberOfNPSLoopsTextField">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <horizontalAlignment value="0"/>
               <text value="20"/>
             </properties>
           </component>
